# gravity

./: CMakeLists.txt  Game.cpp  Game.h  Game2.cpp  Main.cpp  README.md  Window.cpp  Window.h  readme.txt
TestoweObiekty/: ObiektGrawitacyjny.cpp  ObiektGrawitacyjny.h  someMethods.cpp
keyEventHandling/: eventUnit.cpp  eventUnit.h
obiektyGrawitacyjne/: ObiektGrawitacyjny.cpp  ObiektGrawitacyjny.h  someMethods.cpp  someMethods.h  velocity_vector_shape.cpp  velocity_vector_shape.h
